--- a/src/app/modules/custom-login-page/custom-login-page.component.html
+++ b/src/app/modules/custom-login-page/custom-login-page.component.html
@@ -21,13 +21,13 @@
       </form>
       <div class="footer m-t-32">
         <div class="sigup-text">
-          <span>Sign up</span>
+          <span (click)="redirectCallback()">Sign up</span>
         </div>
         <div class="forgot-text">
           <span>Forgot Password</span>
         </div>
       </div>
-      <div class="button-submit m-t-32">
+      <div class="button-submit m-t-32" (click)="auth.loginWithRedirect()">
         Submit
       </div>
     </div>
