--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,26 @@
-<router-outlet></router-outlet>
+<div *ngIf="isActive">
+  <app-header></app-header>
+</div>
+<div>
+  <app-alert></app-alert>
+  <app-loading-spinner></app-loading-spinner>
+</div>
+<div style="display:flex;" >
+  <div *ngIf="isActive">
+    <app-left-nav ></app-left-nav>
+  </div>
+  <div style="margin-left: auto;
+    margin-right: auto;">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+<!--<ng-container *ngIf="auth.isAuthenticated$ | async">-->
+<!--  <button (click)="auth.logout({ returnTo: document.location.origin })">-->
+<!--    Log out-->
+<!--  </button>-->
+<!--  <ul *ngIf="auth.user$ | async as user">-->
+<!--    <li>{{ user.name }}</li>-->
+<!--    <li>{{ user.email }}</li>-->
+<!--  </ul>`-->
+
+<!--</ng-container>-->
