--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,42 @@ input:-webkit-autofill:active  {
 .no-mg{
   margin: 0!important;
 }
+.border-10{
+  border-radius: 10px;
+}
+
+
+//Font
+//Rationale-Regular
+@font-face {
+  font-family: "Rationale";
+  font-style: normal;
+  src: url('./assets/fonts/Rationale-Regular.ttf') format('truetype');
+}
+//Roboto Regular
+@font-face {
+  font-family: "Roboto-R";
+  font-style: normal;
+  src: url('./assets/fonts/Roboto-Regular.ttf') format('truetype');
+}
+
+//Roboto Bold
+@font-face {
+  font-family: "Roboto-B";
+  font-style: normal;
+  src: url('./assets/fonts/Roboto-Bold.ttf') format('truetype');
+}
+
+//Roboto Italic
+@font-face {
+  font-family: "Roboto-I";
+  font-style: normal;
+  src: url('./assets/fonts/Roboto-Italic.ttf') format('truetype');
+}
+
+//Roboto Bold Italic
+@font-face {
+  font-family: "Roboto-B-I";
+  font-style: normal;
+  src: url('./assets/fonts/Roboto-BoldItalic.ttf') format('truetype');
+}
