--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,8 +1,42 @@
 <nav class="navbar navbar-expand-lg ">
-  <a class="navbar-brand" href="#">CEAU</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <div class="wrap-left">
+    <a class="navbar-brand" href="#">CEAU</a>
+    <div class="wrap-cont">
+      <div class="wrap-name">
+        <div class="client-name">
+          <span>Client name</span>
+        </div>
+        <div class="mode">
+          <span>Develop</span>
+        </div>
+      </div>
+      <div class="dropdown-icon">
+        <img src="../../../assets/images/header/dropdown-icon.svg" alt="">
+      </div>
+      <div class="dropdown-menu border-10" style="    display: block;
+    top: 45px;">
+        <div class="wrap-list border-10">
+          <div class="search">
+            <input type="text" placeholder="Search...">
+          </div>
+          <div class="list-item">
+            <div class="item">
+              <span class="c-name">Client name</span>
+<!--              <span class="domain">Domain</span>-->
+              <span class="develop">Develop</span>
+            </div>
+            <div class="item">
+              <span class="c-name">Client name</span>
+<!--              <span class="domain">Domain</span>-->
+              <span class="develop">Develop</span>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
