--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -20,14 +20,14 @@
         </div>
       </form>
       <div class="footer m-t-32">
-        <div class="sigup-text">
-          <span >Sign up</span>
+        <div class="sigup-text" >
+          <span routerLink=""  style="cursor: pointer" >Sign up</span>
         </div>
         <div class="forgot-text">
           <span>Forgot Password</span>
         </div>
       </div>
-      <div class="button-submit m-t-32" (click)="onSubmit()">
+      <div class="button-submit m-t-32" (click)="onSubmit()" style="cursor: pointer" >
         Submit
       </div>
     </div>
