--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@ input:-webkit-autofill:active  {
   margin: 0!important;
 }
 .border-10{
-  border-radius: 10px;
+  border-radius: 10px !important;
 }
 
 
