--- a/src/app/modules/user-application/user-application-create/user-application-create.component.html
+++ b/src/app/modules/user-application/user-application-create/user-application-create.component.html
@@ -1,1 +1,38 @@
-<p>user-application-create works!</p>
+<div class="wrap-content border-10">
+  <div class="top-content">
+    <span class="m-b-12">Create application</span>
+    <span class="m-b-12">Name<span class="text-danger">*</span></span>
+    <input class="m-b-12" type="text">
+    <span>You can change the application name later in the application settings.</span>
+  </div>
+  <div class="middle-content m-t-12">
+    <span >Choose an application type</span>
+    <div class="list-item m-t-12">
+      <div class="item border-10">
+        <img class="m-t-12" src="../../../../assets/images/user-app/app-store.png" alt="">
+        <p class="title m-t-12">Native</p>
+        <span class="content m-t-12">Mobile, desktop, CLI and smart device apps running natively.</span>
+      </div>
+      <div class="item border-10">
+        <img class="m-t-12" src="../../../../assets/images/user-app/Sparkle.png" alt="">
+        <p class="title m-t-12">Single Page Web Applications</p>
+        <span class="content m-t-12">Mobile, desktop, CLI and smart device apps running natively.</span>
+      </div>
+      <div class="item border-10">
+        <img class="m-t-12" src="../../../../assets/images/user-app/Web.png" alt="">
+        <p class="title m-t-12">Regular Web Applications</p>
+        <span class="content m-t-12">Traditional web app using redirects.</span>
+      </div>
+      <div class="item border-10">
+        <img class="m-t-12" src="../../../../assets/images/user-app/Sparkle2.png" alt="">
+        <p class="title m-t-12">Machine to Machine Applications</p>
+        <span class="content m-t-12">CLIs, daemons or services running on your backend.</span>
+      </div>
+    </div>
+
+  </div>
+  <div class="bottom-content m-t-12">
+  <div class="back btn-bt">Back</div>
+  <div class="next btn-bt">Next</div>
+  </div>
+</div>
