--- a/src/app/modules/user-application/user-application-list/user-application-list.component.scss
+++ b/src/app/modules/user-application/user-application-list/user-application-list.component.scss
@@ -45,6 +45,10 @@
           span{
             margin-right: 10px;
           }
+          button{
+            border: none;
+            background: transparent;
+          }
         img{
           width: 21px;
           margin-bottom: 6px;
