--- a/src/app/modules/user-application/user-application-create/user-application-create.component.html
+++ b/src/app/modules/user-application/user-application-create/user-application-create.component.html
@@ -6,7 +6,7 @@
     <span>You can change the application name later in the application settings.</span>
   </div>
   <div class="middle-content m-t-12">
-    <span >Choose an application type</span>
+    <span>Choose an application type</span>
     <div class="list-item m-t-12">
       <div class="item border-10">
         <img class="m-t-12" src="../../../../assets/images/user-app/app-store.png" alt="">
@@ -32,7 +32,7 @@
 
   </div>
   <div class="bottom-content m-t-12">
-  <div class="back btn-bt">Back</div>
-  <div class="next btn-bt">Next</div>
+    <a class="back btn-bt" [routerLink]="['../', 'list']">Back</a>
+    <a class="next btn-bt">Create</a>
   </div>
 </div>
