--- a/src/app/modules/user-application/user-application-list/user-application-list.component.html
+++ b/src/app/modules/user-application/user-application-list/user-application-list.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header">
       <div class="create-app">
-        <a [routerLink]="['user-application', 'create']"><span>Create new app</span></a>
+        <a [routerLink]="['../', 'create']"><span>Create new app</span></a>
       </div>
     </div>
     <div class="list-app">
@@ -12,7 +12,7 @@
         </div>
         <div class="name">
           <span class="app-name">Application 1</span>
-          <span class="type">Application 1</span>
+          <span class="type">Regular Web Application</span>
         </div>
         <div class="client-id">
           <span>Client ID: Qa93sezCtVPI9fvi4HBE91jyOoHabdZz</span>
