--- a/src/app/modules/user-application/user-application-create/user-application-create.component.scss
+++ b/src/app/modules/user-application/user-application-create/user-application-create.component.scss
@@ -53,8 +53,7 @@
       padding: 2px 10px;
       border-radius: 10px;
       cursor: pointer;
-      width: 58px;
-      height: 30px;
+      text-decoration: none;
     }
     .back {
       background: white;
