--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -6,12 +6,12 @@
         <div class="client-name">
           <span>{{currItem.name}}</span>
         </div>
-        <div class="mode">
+        <div class="mode" style="color: white">
           <span>{{currItem.mode}}</span>
         </div>
       </div>
       <div class="dropdown-icon">
-        <img src="../../../assets/images/header/dropdown-icon.svg" alt="">
+      <mat-icon style="color: white">expand_more</mat-icon>
       </div>
       <div class="dropdown-menu border-10">
         <div class="wrap-list border-10">
