--- a/src/app/core/left-nav/left-nav.component.html
+++ b/src/app/core/left-nav/left-nav.component.html
@@ -1,7 +1,7 @@
 <div class="wrap-content">
   <a href="">
     <p><mat-icon class="mat-icon">flag</mat-icon>Getting Started</p></a>
-  <a routerLink="/user-application/list" [routerLinkActive]="'activelink'">
+  <a routerLink="/user-application" [routerLinkActive]="'activelink'">
     <p><mat-icon class="mat-icon">apps</mat-icon>Application</p></a>
   <a href="">
     <p><mat-icon class="mat-icon">person_outline</mat-icon>User Management</p></a>
