--- a/src/app/modules/user-application/user-application-list/user-application-list.component.html
+++ b/src/app/modules/user-application/user-application-list/user-application-list.component.html
@@ -7,13 +7,13 @@
     </div>
     <div class="list-app">
       <div class="app border-10">
-        <div class="wrap-img">
+        <a class="wrap-img" [routerLink]="['../', 'detail']">
           <img class="border-10" src="https://genk.mediacdn.vn/thumb_w/660/139269124445442048/2021/9/13/photo-1-1631488187952925878697.jpg" alt="">
-        </div>
-        <div class="name">
+        </a>
+        <a class="name" [routerLink]="['../', 'detail']">
           <span class="app-name">Application 1</span>
           <span class="type">Regular Web Application</span>
-        </div>
+        </a>
         <div class="client-id">
           <span>Client ID: Qa93sezCtVPI9fvi4HBE91jyOoHabdZz</span>
 
