--- a/src/app/modules/user-application/user-application-list/user-application-list.component.scss
+++ b/src/app/modules/user-application/user-application-list/user-application-list.component.scss
@@ -1,3 +1,7 @@
+a{
+  color: black;
+  text-decoration: none;
+}
 .wrap-content{
   padding-top: 24px;
   .container{
@@ -25,7 +29,7 @@
         justify-content: start;
         align-items: center;
         text-align: center;
-        background-color: #FBF3F3;
+        background-color: #F0EEFF;
         padding: 10px;
         position: relative;
         .wrap-img{
@@ -67,7 +71,7 @@
         .action-op{
           width: 30px;
           height: 30px;
-          background-color: #E14545;
+          background-color: #6F71E5;
           color: white;
           position: absolute;
           right: 10px;
