--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,3 +62,10 @@ input:-webkit-autofill:active  {
   font-style: normal;
   src: url('./assets/fonts/Roboto-BoldItalic.ttf') format('truetype');
 }
+
+.text-secondary{
+  color: #65676e;
+}
+.text-ceau-primary{
+  color: black !important;
+}
