add update, delete app

--- a/src/app/modules/apps/app-list/app-list.component.html
+++ b/src/app/modules/apps/app-list/app-list.component.html
@@ -10,7 +10,7 @@
       </button>
       <div class="wrap-cont ">
         <div class="wrap-name d-flex">
-          <div class="border border-10 px-1 ">
+          <div class="border border-10 px-1 " style="min-width: 100px;">
             <div class="client-name">
               <span class="bold text-dark">{{ currItem.name }}</span>
             </div>
