--- a/src/app/modules/apps/apps-detail/apps-detail.component.html
+++ b/src/app/modules/apps/apps-detail/apps-detail.component.html
@@ -10,100 +10,49 @@
 
 <section class="section bg-light edge top-left ">
   <div class="container bring-to-front border border-10 ">
-    <div class="save-change">
-      <button class="btn-primary border-10 save-change ">Save change</button>
-    </div>
+
     <div class="row align-items-start gap-y pt-4 mt-4 pb-4 border-bottom">
       <div class="col-md-6 col-lg-5 text-center text-md-left">
         <h2 class="text-dark light">Basic information</h2>
       </div>
 
       <div class="col-md-6 col-lg-6">
-        <form
-          action=";"
-          class="cozy"
-          novalidate="novalidate"
-          style="text-align: start"
-        >
+        <form action=";" class="cozy" novalidate="novalidate" style="text-align: start" [formGroup]="profileForm"
+          onsubmit="">
           <div class="form-group">
-            <label class="form-label mb-0 text-black bold"
-              >Name<span class="text-danger">*</span></label
-            >
-            <div
-              class="form-text text-secondary text-ceau-secondary mt-0 mb-2"
-            ></div>
+            <label class="form-label mb-0 text-black bold">Name<span class="text-danger">*</span></label>
+            <div class="form-text text-secondary text-ceau-secondary mt-0 mb-2"></div>
             <div class="position-relative">
-              <input
-                type="text"
-                class="form-control mb-2 mt-2 pr-4"
-                aria-describedby="emailHelp"
-                placeholder="Enter Name"
-              />
-              <dc-copy
-                class="position-absolute"
-                style="top: 8px; right: 6px"
-                [content]="'and'"
-              ></dc-copy>
+              <input type="text" class="form-control mb-2 mt-2 pr-4" aria-describedby="emailHelp"
+                placeholder="Enter Name" formControlName="name" />
+              <dc-copy class="position-absolute" style="top: 8px; right: 6px" [content]="appDetail.name"></dc-copy>
             </div>
           </div>
           <div class="form-group">
-            <label class="form-label mb-0 text-black bold"
-              >Domain<span class="text-danger">*</span></label
-            >
-            <div
-              class="form-text text-secondary text-ceau-secondary mt-0 mb-2"
-            ></div>
+            <label class="form-label mb-0 text-black bold">Domain<span class="text-danger">*</span></label>
+            <div class="form-text text-secondary text-ceau-secondary mt-0 mb-2"></div>
             <div class="position-relative">
-              <input
-                type="text"
-                class="form-control mb-2 mt-2 pr-4"
-                aria-describedby="emailHelp"
-                placeholder="Enter Domain"
-              />
-              <dc-copy
-                class="position-absolute"
-                style="top: 8px; right: 6px"
-                [content]="'and'"
-              ></dc-copy>
+              <input type="text" class="form-control mb-2 mt-2 pr-4" aria-describedby="emailHelp"
+                placeholder="Enter Domain" formControlName="domain" />
+              <dc-copy class="position-absolute" style="top: 8px; right: 6px" [content]="appDetail.domain"></dc-copy>
             </div>
           </div>
           <div class="form-group">
-            <label class="form-label mb-0 text-black bold"
-              >Client ID<span class="text-danger">*</span></label
-            >
-            <div
-              class="form-text text-secondary text-ceau-secondary mt-0 mb-2"
-            ></div>
+            <label class="form-label mb-0 text-black bold">Client ID<span class="text-danger">*</span></label>
+            <div class="form-text text-secondary text-ceau-secondary mt-0 mb-2"></div>
             <div class="position-relative">
-              <input
-                type="text"
-                class="form-control mb-2 mt-2 pr-4"
-                aria-describedby="emailHelp"
-                placeholder="Enter Domain"
-              />
-              <dc-copy
-                class="position-absolute"
-                style="top: 8px; right: 6px"
-                [content]="'and'"
-              ></dc-copy>
+              <input type="text" class="form-control mb-2 mt-2 pr-4" aria-describedby="emailHelp"
+                placeholder="Enter Domain" formControlName="client_id" />
+              <dc-copy class="position-absolute" style="top: 8px; right: 6px" [content]="appDetail.client_id"></dc-copy>
             </div>
           </div>
           <div class="form-group">
-            <label class="form-label mb-0 text-black bold"
-              >Client Secret<span class="text-danger">*</span></label
-            >
+            <label class="form-label mb-0 text-black bold">Client Secret<span class="text-danger">*</span></label>
             <div class="position-relative">
-              <input
-                type="text"
-                class="form-control mb-2 mt-2 pr-4"
-                aria-describedby="emailHelp"
-                placeholder="Enter Domain"
-              />
-              <dc-copy
-                class="position-absolute"
-                style="top: 8px; right: 6px"
-                [content]="'and'"
-              ></dc-copy>
+              <input type="text" class="form-control mb-2 mt-2 pr-4" aria-describedby="emailHelp"
+                placeholder="Enter Domain" formControlName="client_secret" />
+              <dc-copy class="position-absolute" style="top: 8px; right: 6px" [content]="appDetail.client_secret">
+              </dc-copy>
             </div>
             <div class="form-text text-secondary text-ceau-secondary mt-0 mb-2">
               The Client Secret is not base64 encoded.
@@ -118,28 +67,15 @@
       </div>
 
       <div class="col-md-6 col-lg-6">
-        <form
-          action=";"
-          class="cozy"
-          novalidate="novalidate"
-          style="text-align: start"
-        >
+        <form action=";" class="cozy" novalidate="novalidate" style="text-align: start" [formGroup]="profileForm">
           <div class="form-group">
-            <label class="form-label mb-0 text-black bold"
-              >Application Logo<span class="text-danger">*</span></label
-            >
+            <label class="form-label mb-0 text-black bold">Application Logo<span class="text-danger">*</span></label>
             <div class="center-flex border-1px-grey p-3 mt-2 border-10">
               <img [src]="logoSrc" style="height: 60px; width: 60px" alt="" />
             </div>
             <div class="center-flex">
-              <input
-                type="text"
-                class="form-control mb-2 mt-2"
-                aria-describedby="emailHelp"
-                placeholder="Enter Url Image"
-                [(ngModel)]="logoSrc"
-                [ngModelOptions]="{ standalone: true }"
-              />
+              <input type="text" class="form-control mb-2 mt-2" aria-describedby="emailHelp"
+                placeholder="Enter Url Image" [(ngModel)]="logoSrc" [ngModelOptions]="{ standalone: true }" />
             </div>
 
             <div class="form-text text-secondary text-ceau-secondary mt-0 mb-2">
@@ -149,21 +85,34 @@
             </div>
           </div>
           <div class="form-group">
-            <label class="form-label mb-0 text-black bold"
-              >Application Type<span class="text-danger">*</span></label
-            >
-            <select
-              class="form-select form-control-rounded valid"
-              aria-invalid="false"
-            >
-              <option *ngFor="let app of listAppType">{{ app }}</option>
+            <label class="form-label mb-0 text-black bold">Authorization Grant Type<span class="text-danger">*</span></label>
+
+            <select class="form-select form-control-rounded valid" aria-invalid="false"
+              formControlName="authorization_grant_type">
+              <option *ngFor="let app of listAuthorizationGrantType" [value]="app.value"
+                [selected]="app.value == appDetail.authorization_grant_type">{{ app.name }}</option>
             </select>
-            <div class="form-text text-secondary text-ceau-secondary mt-0 mb-2">
+            <!-- <div class="form-text text-secondary text-ceau-secondary mt-0 mb-2">
               The type of application will determine which settings you can
               configure from the dashboard.
-            </div>
+            </div> -->
           </div>
           <div class="form-group">
+            <label class="form-label mb-0 text-black bold">Application Type<span class="text-danger">*</span></label>
+
+            <select class="form-select form-control-rounded valid" aria-invalid="false"
+              formControlName="type">
+              <option  [value]="null"
+                [selected]="appDetail.type == null">None</option>
+              <option *ngFor="let app of listAppType" [value]="app.value"
+                [selected]="app.value == appDetail.type">{{ app.name }}</option>
+            </select>
+            <!-- <div class="form-text text-secondary text-ceau-secondary mt-0 mb-2">
+              The type of application will determine which settings you can
+              configure from the dashboard.
+            </div> -->
+          </div>
+          <!-- <div class="form-group">
             <label class="form-label mb-2 text-black bold"
               >Token Endpoint Authentication Method<span class="text-danger"
                 >*</span
@@ -181,7 +130,8 @@
               client secret), 'Post' (application uses HTTP POST parameters) or
               'Basic' (application uses HTTP Basic).
             </div>
-          </div>
+          </div> -->
+
         </form>
       </div>
     </div>
@@ -191,25 +141,29 @@
       </div>
 
       <div class="col-md-6 col-lg-6">
-        <form
-          action=";"
-          class="cozy"
-          novalidate="novalidate"
-          style="text-align: start"
-        >
+        <form action=";" class="cozy" novalidate="novalidate" style="text-align: start"  [formGroup]="profileForm">
           <div class="form-group">
             <label class="form-label mb-0 text-black bold">
-              Application Login URI</label
-            >
-            <div
-              class="form-text text-secondary text-ceau-secondary mt-0 mb-2"
-            ></div>
+              Redirect URL</label>
+            <div class="form-text text-secondary text-ceau-secondary mt-0 mb-2"></div>
             <div class="position-relative">
-              <input
-                type="text"
-                class="form-control mb-2 mt-2 pr-4"
-                placeholder="https://myapp.com.login"
+              <input type="text" class="form-control mb-2 mt-2 pr-4" placeholder="https://myapp.com"
+              formControlName="redirect_uris"
               />
+            </div>
+            <!-- <div class="form-text text-secondary text-ceau-secondary mt-0 mb-2">
+              In some scenarios, Auth0 will need to redirect to your
+              application’s login page. This URI needs to point to a route in
+              your application that should redirect to your tenant’s /authorize
+              endpoint.
+            </div> -->
+          </div>
+          <!-- <div class="form-group"> 
+            <label class="form-label mb-0 text-black bold">
+              Application Login URI</label>
+            <div class="form-text text-secondary text-ceau-secondary mt-0 mb-2"></div>
+            <div class="position-relative">
+              <input type="text" class="form-control mb-2 mt-2 pr-4" placeholder="https://myapp.com.login" />
             </div>
             <div class="form-text text-secondary text-ceau-secondary mt-0 mb-2">
               In some scenarios, Auth0 will need to redirect to your
@@ -220,11 +174,8 @@
           </div>
           <div class="form-group">
             <label class="form-label mb-0 text-black bold">
-              Allowed Callback URLs</label
-            >
-            <div
-              class="form-text text-secondary text-ceau-secondary mt-0 mb-2"
-            ></div>
+              Allowed Callback URLs</label>
+            <div class="form-text text-secondary text-ceau-secondary mt-0 mb-2"></div>
             <div class="position-relative">
               <textarea class="form-control mb-2 mt-2 pr-4"> </textarea>
             </div>
@@ -241,11 +192,8 @@
           </div>
           <div class="form-group">
             <label class="form-label mb-0 text-black bold">
-              Allowed Logout URLs</label
-            >
-            <div
-              class="form-text text-secondary text-ceau-secondary mt-0 mb-2"
-            ></div>
+              Allowed Logout URLs</label>
+            <div class="form-text text-secondary text-ceau-secondary mt-0 mb-2"></div>
             <div class="position-relative">
               <textarea class="form-control mb-2 mt-2 pr-4"> </textarea>
             </div>
@@ -263,9 +211,7 @@
             <label class="form-label mb-0 text-black bold">
               Allowed Web Origins
             </label>
-            <div
-              class="form-text text-secondary text-ceau-secondary mt-0 mb-2"
-            ></div>
+            <div class="form-text text-secondary text-ceau-secondary mt-0 mb-2"></div>
             <div class="position-relative">
               <textarea class="form-control mb-2 mt-2 pr-4"> </textarea>
             </div>
@@ -278,9 +224,7 @@
             <label class="form-label mb-0 text-black bold">
               Allowed Origins (CORS)
             </label>
-            <div
-              class="form-text text-secondary text-ceau-secondary mt-0 mb-2"
-            ></div>
+            <div class="form-text text-secondary text-ceau-secondary mt-0 mb-2"></div>
             <div class="position-relative">
               <textarea class="form-control mb-2 mt-2 pr-4"> </textarea>
             </div>
@@ -295,11 +239,11 @@
               taken into account when validating these URLs.. You can use
               Organization URL placeholders in these URLs.
             </div>
-          </div>
+          </div> -->
         </form>
       </div>
     </div>
-    <div class="row align-items-start gap-y pt-4 mt-4 pb-4 border-bottom">
+    <!-- <div class="row align-items-start gap-y pt-4 mt-4 pb-4 border-bottom">
       <div class="col-md-6 col-lg-5 text-center text-md-left">
         <h2 class="text-dark light">ID Token</h2>
       </div>
@@ -481,9 +425,9 @@
           </div>
         </form>
       </div>
-    </div>
+    </div> -->
     <div class="save-change center-flex">
-      <button class="btn-primary border-10 save-change ">Save change</button>
+      <button class="btn-primary border-10 save-change " (click)="onSubmit()">Save change</button>
     </div>
     <div class="row align-items-start gap-y pt-4 mt-4 pb-4 mb-4 border-bottom">
       <div class="col-12 bold text-black">Danger Zone</div>
@@ -492,7 +436,7 @@
         <p>All your apps using this client will stop working.</p>
       </div>
       <div class="col-4 col-md-2 margin-auto">
-        <button class="btn-danger border-10">Delete</button>
+        <button class="btn-danger border-10" (click)="onDelete()">Delete</button>
       </div>
       <div class="col-8 col-md-10 text-danger">
         <p>Rotate secret</p>
