--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   [position]="'right'"
 ></dc-navbar-default>
 <main class="position-relative overflow-hidden" style="    margin-top: 90px;">
+  <dc-alert-basic></dc-alert-basic>
   <app-loader [isLoadingProgress]="false" [message]="'ac'"></app-loader>
   <router-outlet></router-outlet>
 </main>
