--- a/src/app/modules/role/role-detail/role-detail.component.scss
+++ b/src/app/modules/role/role-detail/role-detail.component.scss
@@ -5,3 +5,11 @@
 .vh-100 {
   height: calc(50vh) !important;
 }
+.text-center {
+  .heading-line {
+    &:after {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+}
