--- a/src/app/shell/components/navbar/navbar-shell/navbar-shell.component.html
+++ b/src/app/shell/components/navbar/navbar-shell/navbar-shell.component.html
@@ -5,6 +5,7 @@
     'navbar-sticky': navbarSticky,
     'dark-link': darkLinks
   }"
+  style="z-index: 999999"
 >
   <div class="container" style="max-width: 1440px; margin: auto">
     <button class="navbar-toggler" type="button" (click)="toggleNavbar()">
