--- a/src/app/modules/app-create/app-create.component.html
+++ b/src/app/modules/app-create/app-create.component.html
@@ -35,7 +35,7 @@
           for="exampleInputEmailBase"
           class="form-label mb-2 bold"
           style="display: inherit"
-          >Choose an application type</label
+          >Choose an Application Type</label
         >
         <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
           <mat-button-toggle
