--- a/src/app/modules/apps/app-list/app-list.component.html
+++ b/src/app/modules/apps/app-list/app-list.component.html
@@ -1,6 +1,9 @@
 <div class="wrap-content">
-  <div class="container">
-    <div class="header d-flex justify-content-between">
+  <div class="container setting-list-page">
+    <div class="header d-flex justify-content-between pb-2 ">
+      <h1>
+        Application
+      </h1>
       <button
         type="button"
         [routerLink]="['../', 'create']"
