--- a/src/app/modules/intro/intro-main-page/intro-main-page.component.html
+++ b/src/app/modules/intro/intro-main-page/intro-main-page.component.html
@@ -1,15 +1,15 @@
 <div class="wrap-content">
   <div class="container">
     <div class=" row mx-auto bg-info my-4 py-4  rounded text-light">
-      <div class="content col-6">
+      <div class="content col-12">
         <h2 class="text-light">Quickstarts</h2>
         <p class="text-medium">
           Step-by-step guides to quickly integrate Auth0 into your application
         </p>
       </div>
-      <div class="img col-6">
+      <!-- <div class="img col-6">
         <img src="../../../../assets/images/intro/header_img.svg" alt="" />
-      </div>
+      </div> -->
     </div>
     <div class="quick-start border rounded py-4 px-4">
       <div class="row">
@@ -21,7 +21,7 @@
           alt=""
         />
 
-        <div class="col-8 ">
+        <div class="col-9">
           <h3 class="">Quick start</h3>
           <p class="text-medium">
             This tutorial demonstrates how to create an application and login
