--- a/src/app/modules/user/list/list.component.html
+++ b/src/app/modules/user/list/list.component.html
@@ -1,7 +1,7 @@
 <div class="wrap-content">
-  <div class="container my-4">
+  <div class="container my-4 setting-list-page">
     <div class="header mb-4">
-      <div class="d-flex justify-content-between">
+      <div class="d-flex justify-content-between pb-2 ">
         <h4 class="text-title-small bold text-uppercase">User</h4>
 
         <a
