--- a/src/app/modules/user/user-create/user-create.component.html
+++ b/src/app/modules/user/user-create/user-create.component.html
@@ -1,5 +1,5 @@
 <div class="wrap-content">
-  <div class="container mt-4">
+  <div class="container mt-4 p-4 border border-10">
     <h1 class="text-darker bold">Create User</h1>
     <form
       [formGroup]="profileForm"
