--- a/src/app/shell/components/navbar/navbar-default/navbar-default.component.html
+++ b/src/app/shell/components/navbar/navbar-default/navbar-default.component.html
@@ -6,6 +6,21 @@
     <li class=" my-auto hide-in-mobile">
       <dc-menu-client [dynamic]="true" [currItem]="currClient"></dc-menu-client>
     </li>
+    <li class="nav-item hide-in-pc" style="padding: 16px; color: #5533ff;">
+      <div *ngIf="currClient.name" class="wrap-cont text-dark ">
+        <div class="wrap-name d-flex">
+          <div class="gradient-border px-1 " style="max-width:100%">
+            <div class="client-name overflow-hidden">
+              <span class="bold">{{ currClient.name }}</span>
+            </div>
+            <div class="mode overflow-hidden" *ngIf="currClient.domains">
+              <span class="">{{ currClient.domains[0].domain }}</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </li>
+
     <li class="nav-item hide-in-pc">
       <a class="nav-link" [routerLink]="['/home']">Home</a>
     </li>
@@ -57,7 +72,10 @@
     <li class="nav-item hide-in-pc">
       <a class="nav-link" [routerLink]="['/intro', 'page']">Introduction</a>
     </li>
-    <li class="nav-item hide-in-pc">
+    <li class="nav-item hide-in-pc" *ngIf="isAuthenticated()">
+      <a class="nav-link" [routerLink]="['/profile']">Profile</a>
+    </li>
+    <li class="nav-item hide-in-pc" *ngIf="isAuthenticated()">
       <a class="nav-link" [routerLink]="['/applications', 'list']"
         >Application</a
       >
