--- a/src/app/modules/role/role-detail/role-detail.component.html
+++ b/src/app/modules/role/role-detail/role-detail.component.html
@@ -1,136 +1,141 @@
 <div class="wrap-content">
-  <div class="container my-4">
-    <a
-      class="btn btn-info text-light text-medium"
-      [routerLink]="['../../', 'list']"
-      >< Back</a
-    >
-    <div class="mt-4">
-      <h3>Role</h3>
-      <div>
-        <span class="text-medium my-auto"
-          >Role ID: <span class="text-medium text-dark bg-light">{{ id }}</span>
-        </span>
-      </div>
+  <div class="container ">
+    <div class="py-4">
+      <a
+        class="btn btn-info text-light text-medium "
+        [routerLink]="['../../', 'list']"
+        >< Back</a
+      >
     </div>
-    <mat-tab-group mat-align-tabs="center">
-      <mat-tab class="min-vh-100">
-        <ng-template mat-tab-label>
-          <span class="text-medium bold text-dark text-uppercase"
-            >Settings</span
-          >
-        </ng-template>
-
-        <form [formGroup]="profileForm" class="my-4" (ngSubmit)="onSubmit()">
-          <div class="form-group">
-            <label
-              for="exampleInputEmailBase"
-              class="form-label mb-0 bold text-medium"
-              >Role name <span class="text-danger">*</span></label
-            >
-            <input
-              type="text"
-              class="form-control"
-              id="exampleInputEmailBase"
-              aria-describedby="emailHelp"
-              placeholder="Enter name"
-              formControlName="name"
-            />
-          </div>
-          <div class="form-group">
-            <label
-              for="exampleInputRoleBase"
-              class="form-label mb-0 bold text-medium"
-              >Role Description <span class="text-danger">*</span></label
-            >
-            <input
-              type="text"
-              class="form-control"
-              id="exampleInputRoleBase"
-              aria-describedby="emailHelp"
-              placeholder="Enter name"
-              formControlName="description"
-            />
-          </div>
-          <button class="btn btn-secondary text-medium">Save</button>
-        </form>
-        <div
-          class="row align-items-start gap-y pt-4 mx-0 px-0 mt-4 pb-4 mb-4 border-bottom"
-        >
-          <div class="col-12 bold px-0 text-black mx-0 px-0">Danger Zone</div>
-          <div class="col-8 col-md-10 text-danger mx-0 px-0">
-            <p>Delete this Role</p>
-            <!--          <p>All your apps using this client will stop working.</p>-->
-          </div>
-          <div class="col-4 col-md-2 margin-auto mx-0 px-0">
-            <button class="btn-danger border-10" (click)="onDelete()">
-              Delete
-            </button>
-          </div>
+    <div class="setting-list-page">
+      <div class="">
+        <h3>Role</h3>
+        <div>
+          <span class="text-medium my-auto"
+            >Role ID:
+            <span class="text-medium text-dark bg-light">{{ id }}</span>
+          </span>
         </div>
-      </mat-tab>
-      <mat-tab class="">
-        <ng-template mat-tab-label>
-          <span class="text-medium bold text-dark text-uppercase "
-            >Permission</span
+      </div>
+      <mat-tab-group mat-align-tabs="center">
+        <mat-tab class="min-vh-100">
+          <ng-template mat-tab-label>
+            <span class="text-medium bold text-dark text-uppercase"
+              >Settings</span
+            >
+          </ng-template>
+
+          <form [formGroup]="profileForm" class="my-4" (ngSubmit)="onSubmit()">
+            <div class="form-group">
+              <label
+                for="exampleInputEmailBase"
+                class="form-label mb-0 bold text-medium"
+                >Role name <span class="text-danger">*</span></label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="exampleInputEmailBase"
+                aria-describedby="emailHelp"
+                placeholder="Enter name"
+                formControlName="name"
+              />
+            </div>
+            <div class="form-group">
+              <label
+                for="exampleInputRoleBase"
+                class="form-label mb-0 bold text-medium"
+                >Role Description <span class="text-danger">*</span></label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="exampleInputRoleBase"
+                aria-describedby="emailHelp"
+                placeholder="Enter name"
+                formControlName="description"
+              />
+            </div>
+            <button class="btn btn-secondary text-medium">Save</button>
+          </form>
+          <div
+            class="row align-items-start gap-y pt-4 mx-0 px-0 mt-4 pb-4 mb-4 "
           >
-        </ng-template>
-        <div class="container my-4 min-vh-100">
-          <div class="header mb-4">
-            <div class="d-flex justify-content-between">
-              <h4 class="text-title-small bold text-uppercase">Permission</h4>
-              <button type="button" class="btn btn-primary text-large">
-                Add
+            <div class="col-12 bold px-0 text-black mx-0 px-0">Danger Zone</div>
+            <div class="col-8 col-md-10 text-danger mx-0 px-0">
+              <p>Delete this Role</p>
+              <!--          <p>All your apps using this client will stop working.</p>-->
+            </div>
+            <div class="col-4 col-md-2 margin-auto mx-0 px-0">
+              <button class="btn-danger border-10" (click)="onDelete()">
+                Delete
               </button>
             </div>
-            <h5 class="text-medium my-3">
-              Add Permissions to this Role. Users who have this Role will
-              receive all Permissions below that match the API of their login
-              request.
-            </h5>
           </div>
-          <table class="table">
-            <thead>
-              <tr class="text-dark">
-                <th scope="col">Permission</th>
-                <th scope="col">Description</th>
-                <th scope="col">API</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
-      </mat-tab>
-      <mat-tab>
-        <ng-template mat-tab-label>
-          <span class="text-medium bold text-dark text-uppercase">User</span>
-        </ng-template>
-        <div class="container my-4 min-vh-100">
-          <div class="header mb-4">
-            <div class="d-flex justify-content-between">
-              <h4 class="text-title-small bold text-uppercase">User</h4>
-
-              <!--            (click)="toggleForm = !toggleForm"-->
-              <button type="button" class="btn btn-primary text-large">
-                Add
-              </button>
+        </mat-tab>
+        <mat-tab class="">
+          <ng-template mat-tab-label>
+            <span class="text-medium bold text-dark text-uppercase "
+              >Permission</span
+            >
+          </ng-template>
+          <div class="container my-4 min-vh-100">
+            <div class="header mb-4">
+              <div class="d-flex justify-content-between">
+                <h4 class="text-title-small bold text-uppercase">Permission</h4>
+                <button type="button" class="btn btn-primary text-large">
+                  Add
+                </button>
+              </div>
+              <h5 class="text-medium my-3">
+                Add Permissions to this Role. Users who have this Role will
+                receive all Permissions below that match the API of their login
+                request.
+              </h5>
             </div>
-            <h5 class="text-medium my-3">
-              Users that have this role directly assigned.
-            </h5>
+            <table class="table">
+              <thead>
+                <tr class="text-dark">
+                  <th scope="col">Permission</th>
+                  <th scope="col">Description</th>
+                  <th scope="col">API</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
           </div>
-          <table class="table">
-            <thead>
-              <tr class="text-dark">
-                <th scope="col">Permission</th>
-                <th scope="col">Description</th>
-                <th scope="col">API</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
-      </mat-tab>
-    </mat-tab-group>
+        </mat-tab>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <span class="text-medium bold text-dark text-uppercase">User</span>
+          </ng-template>
+          <div class="container my-4 min-vh-100">
+            <div class="header mb-4">
+              <div class="d-flex justify-content-between">
+                <h4 class="text-title-small bold text-uppercase">User</h4>
+
+                <!--            (click)="toggleForm = !toggleForm"-->
+                <button type="button" class="btn btn-primary text-large">
+                  Add
+                </button>
+              </div>
+              <h5 class="text-medium my-3">
+                Users that have this role directly assigned.
+              </h5>
+            </div>
+            <table class="table">
+              <thead>
+                <tr class="text-dark">
+                  <th scope="col">Permission</th>
+                  <th scope="col">Description</th>
+                  <th scope="col">API</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
+          </div>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
   </div>
 </div>
