--- a/src/app/modules/role/role-list/role-list.component.html
+++ b/src/app/modules/role/role-list/role-list.component.html
@@ -1,7 +1,7 @@
 <div class="wrap-content">
-  <div class="container my-4">
+  <div class="container my-4 setting-list-page">
     <div class="header mb-4">
-      <div class="d-flex justify-content-between">
+      <div class="d-flex justify-content-between pb-2 ">
         <h4 class="text-title-small bold text-uppercase">Roles</h4>
 
         <button
@@ -41,7 +41,8 @@
           </select>
         </div>
       </div>
-      <div *ngIf="toggleForm" class="py-5">
+      <div *ngIf="toggleForm" class="py-5 border border-10 px-4">
+        <h2>Create new Role</h2>
         <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <label
