--- a/src/app/modules/tenant-api/tenant-api-detail/tenant-api-detail.component.html
+++ b/src/app/modules/tenant-api/tenant-api-detail/tenant-api-detail.component.html
@@ -5,80 +5,82 @@
       [routerLink]="['../../', 'list']"
       >< Back</a
     >
-    <div class="mt-4">
-      <h3>Tenant Api</h3>
+    <div class="setting-list-page my-4">
       <div>
-        <span class="text-medium my-auto"
-          >ID: <span class="text-medium text-dark bg-light">{{ id }}</span>
-        </span>
-      </div>
-    </div>
-    <mat-tab-group mat-align-tabs="center">
-      <mat-tab class="min-vh-100">
-        <ng-template mat-tab-label>
-          <span class="text-medium bold text-dark text-uppercase"
-            >Edit Tenant Api</span
-          >
-        </ng-template>
-
-        <form [formGroup]="profileForm" class="my-4" (ngSubmit)="onSubmit()">
-          <div class="form-group">
-            <label
-              for="exampleInputEmailBase"
-              class="form-label mb-0 bold text-medium"
-              >Name <span class="text-danger">*</span></label
-            >
-            <input
-              type="text"
-              class="form-control"
-              id="exampleInputEmailBase"
-              aria-describedby="emailHelp"
-              placeholder="Enter name"
-              formControlName="name"
-            />
-          </div>
-          <div class="form-group">
-            <label
-              for="exampleInputRoleBase"
-              class="form-label mb-0 bold text-medium"
-              >Url <span class="text-danger">*</span></label
-            >
-            <input
-              type="text"
-              class="form-control"
-              id="exampleInputRoleBase"
-              aria-describedby="emailHelp"
-              placeholder="Enter name"
-              formControlName="url"
-            />
-          </div>
-          <div class="form-group">
-            <label class="form-label mb-0 bold text-medium">
-              Type <span class="text-danger">*</span></label
-            >
-            <select class="custom-select" formControlName="type">
-              <option value="" disabled>Choose your Type</option>
-              <option [ngValue]="'System'">{{ 'System' }}</option>
-              <option [ngValue]="'User'">{{ 'User' }}</option>
-            </select>
-          </div>
-          <button class="btn btn-secondary text-medium">Save</button>
-        </form>
-        <div
-          class="row align-items-start gap-y pt-4 mx-0 px-0 mt-4 pb-4 mb-4 border-bottom"
-        >
-          <div class="col-12 bold px-0 text-black mx-0 px-0">Danger Zone</div>
-          <div class="col-8 col-md-10 text-danger mx-0 px-0">
-            <p>Delete this Role</p>
-            <!--          <p>All your apps using this client will stop working.</p>-->
-          </div>
-          <div class="col-4 col-md-2 margin-auto mx-0 px-0">
-            <button class="btn-danger border-10" (click)="onDelete()">
-              Delete
-            </button>
-          </div>
+        <h3>Tenant Api</h3>
+        <div>
+          <!-- <span class="text-medium my-auto"
+            >Created at: <span class="text-medium text-dark bg-light">{{ id }}</span>
+          </span> -->
         </div>
-      </mat-tab>
-    </mat-tab-group>
+      </div>
+      <mat-tab-group mat-align-tabs="center">
+        <mat-tab class="min-vh-100">
+          <ng-template mat-tab-label>
+            <span class="text-medium bold text-dark text-uppercase"
+              >Edit Tenant Api</span
+            >
+          </ng-template>
+
+          <form [formGroup]="profileForm" class="my-4" (ngSubmit)="onSubmit()">
+            <div class="form-group">
+              <label
+                for="exampleInputEmailBase"
+                class="form-label mb-0 bold text-medium"
+                >Name <span class="text-danger">*</span></label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="exampleInputEmailBase"
+                aria-describedby="emailHelp"
+                placeholder="Enter name"
+                formControlName="name"
+              />
+            </div>
+            <div class="form-group">
+              <label
+                for="exampleInputRoleBase"
+                class="form-label mb-0 bold text-medium"
+                >Url <span class="text-danger">*</span></label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="exampleInputRoleBase"
+                aria-describedby="emailHelp"
+                placeholder="Enter name"
+                formControlName="url"
+              />
+            </div>
+            <div class="form-group">
+              <label class="form-label mb-0 bold text-medium">
+                Type <span class="text-danger">*</span></label
+              >
+              <select class="custom-select" formControlName="type">
+                <option value="" disabled>Choose your Type</option>
+                <option [ngValue]="'System'">{{ 'System' }}</option>
+                <option [ngValue]="'User'">{{ 'User' }}</option>
+              </select>
+            </div>
+            <button class="btn btn-secondary text-medium">Save</button>
+          </form>
+          <div
+            class="row align-items-start gap-y pt-4 mx-0 px-0 mt-4 pb-4 mb-4"
+          >
+            <div class="col-12 bold px-0 text-black mx-0 px-0">Danger Zone</div>
+            <div class="col-8 col-md-10 text-danger mx-0 px-0">
+              <p>Delete this Role</p>
+              <!--          <p>All your apps using this client will stop working.</p>-->
+            </div>
+            <div class="col-4 col-md-2 margin-auto mx-0 px-0">
+              <button class="btn-danger border-10" (click)="onDelete()">
+                Delete
+              </button>
+            </div>
+          </div>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
   </div>
 </div>
