--- a/src/app/shell/components/navbar/navbar-default/navbar-default.component.scss
+++ b/src/app/shell/components/navbar/navbar-default/navbar-default.component.scss
@@ -19,3 +19,45 @@
 .dropdown-profile-border {
   border-top: 1px solid #e3e4e6;
 }
+
+.gradient-border {
+  --borderWidth: 2px;
+  background: white;
+  position: relative;
+  border-radius: var(--borderWidth);
+}
+.gradient-border:after {
+  content: "";
+  position: absolute;
+  top: calc(-1 * var(--borderWidth));
+  left: calc(-1 * var(--borderWidth));
+  height: calc(100% + var(--borderWidth) * 2);
+  width: calc(100% + var(--borderWidth) * 2);
+  background: linear-gradient(
+    60deg,
+    #339ff7,
+    #08306c,
+    #0f63a4,
+    #45219b,
+    #5073b8,
+    #1098ad,
+    #07b39b,
+    #6fba82
+  );
+  border-radius: calc(2 * var(--borderWidth));
+  z-index: -1;
+  animation: animatedgradient 3s ease alternate infinite;
+  background-size: 300% 300%;
+}
+
+@keyframes animatedgradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
