--- a/src/theme/dashcore/_styles.scss
+++ b/src/theme/dashcore/_styles.scss
@@ -12,3 +12,12 @@
 @import "styles/__pricing";
 @import "styles/__heading";
 @import "styles/misc";
+
+.setting-list-page {
+  @media screen and (min-width: 768px) {
+    padding: 1.5rem !important;
+    border-radius: 10px;
+    border: 1px solid #d9e2ef !important;
+    min-height: 500px;
+  }
+}
